[package]
name = "simple-http-echo-server"
version = "0.1.8"
edition = "2024"
description = "Simple HTTP echo server"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive", "env"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["full"] }
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
